# some_c_shit

./: CMakeLists.txt
src/: main.c
src/headers/: date.h  student.h  student_list.h
src/sources/: date.c  student.c  student_list.c
